--- a/src/scss/theme/navbar.scss
+++ b/src/scss/theme/navbar.scss
@@ -10,7 +10,7 @@
 	}
 	.nav-link {
 		color: $black !important;
-		padding: 0 20px !important;
+		padding: 20px 20px !important;
 		opacity: 0.8 !important;
 		&:hover {
 			color: $primary !important;
