--- a/src/scss/theme/navbar.scss
+++ b/src/scss/theme/navbar.scss
@@ -10,17 +10,22 @@
 	}
 	.nav-link {
 		color: $black !important;
-		padding: 20px 20px !important;
+		padding: 10px 15px !important;
 		opacity: 0.8 !important;
 		&:hover {
 			color: $primary !important;
+			opacity: 1 !important;
 		}
 		&:active {
 			color: $primary !important;
+			opacity: 1 !important;
 		}
 	}
 	.navbar-collapse {
-		padding: 30px 0;
+		padding: 0;
+		@media (min-width: 768px) {
+			padding: 30px 0;
+		}
 		background-color: #fefbfa3d;
 		border-radius: 20px;
 		border: 1px solid #ffc5a6;
