--- a/src/scss/theme/navbar.scss
+++ b/src/scss/theme/navbar.scss
@@ -24,10 +24,40 @@
 	.navbar-collapse {
 		padding: 0;
 		@media (min-width: 768px) {
-			padding: 30px 0;
+			padding: 20px 0;
 		}
 		background-color: #fefbfa3d;
-		border-radius: 20px;
+		border-radius: 15px;
 		border: 1px solid #ffc5a6;
 	}
+}
+
+.navbar .dropdown-menu-end {
+	right: 0;
+	left: auto;
+}
+.navbar .nav-item .dropdown-menu {
+	display: block;
+	opacity: 0;
+	visibility: hidden;
+	transition: 0.3s;
+	margin-top: 0;
+}
+.navbar .nav-item:hover .nav-link {
+	color: #fff;
+}
+.navbar .dropdown-menu.fade-down {
+	top: 80%;
+	transform: rotateX(-75deg);
+	transform-origin: 0% 0%;
+}
+.navbar .dropdown-menu.fade-up {
+	top: 180%;
+}
+.navbar .nav-item:hover .dropdown-menu {
+	transition: 0.3s;
+	opacity: 1;
+	visibility: visible;
+	top: 100%;
+	transform: rotateX(0deg);
 }
