--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,11 +1,13 @@
 @import "./custom.scss";
 @import "./theme/navbar.scss";
+@import "./theme/card.scss";
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Niconne&display=swap");
+
 body {
 	background-color: $white;
 	font-family: "Lora", serif;
-	h2 {
-		font-family: "Niconne", cursive;
-	}
+}
+section {
+	padding: 60px 0;
 }
