--- a/src/scss/theme/navbar.scss
+++ b/src/scss/theme/navbar.scss
@@ -10,7 +10,10 @@
 	}
 	.nav-link {
 		color: $black !important;
-		padding: 10px 15px !important;
+		padding: 10px 10px !important;
+		@media (min-width: 1200px) {
+			padding: 20px 0;
+		}
 		opacity: 0.8 !important;
 		&:hover {
 			color: $primary !important;
