--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -16,6 +16,7 @@ $black: #000;
 $darknew: #050309ed;
 $pink: #ff4566;
 $gray: #4e4e4e;
+$gray-light-1: #fee9dd57;
 
 $theme-colors: (
 	"primary": $primary,
@@ -28,7 +29,8 @@ $theme-colors: (
 	"black": $black,
 	"darknew": $darknew,
 	"pink": $pink,
-	"gray": $gray
+	"gray": $gray,
+	"gray-light-1": $gray-light-1
 );
 // 3. Include remainders of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "../../node_modules/bootstrap/scss/variables.scss";
