--- a/src/scss/theme/footer.scss
+++ b/src/scss/theme/footer.scss
@@ -1,6 +1,29 @@
 footer {
 	background-color: #f1f1f14d;
-	padding-top: 40px;
+	padding-top: 50px;
+	.events-top {
+		margin-top: 7px;
+	}
+	p {
+		color: $black;
+		font-size: 0.8rem;
+	}
+	h6 {
+		opacity: 1;
+		color: $black;
+		font-weight: bold;
+	}
+	a:not(.social-media a) {
+		text-decoration: none;
+		color: $black;
+		opacity: 0.5;
+		font-family: "Poppins", sans-serif;
+		font-size: 0.8rem;
+		&:hover {
+			opacity: 1;
+			color: $primary;
+		}
+	}
 	.footer-logo {
 		width: 100px;
 		height: auto;
@@ -11,6 +34,17 @@ footer {
 		padding: 0;
 		li {
 			list-style: none;
+			padding-bottom: 10px;
+			.links {
+				opacity: 0.5;
+				font-family: "Poppins", sans-serif;
+				font-size: 0.8rem;
+
+				&:hover {
+					opacity: 1;
+					color: $primary;
+				}
+			}
 		}
 		&.social-media {
 			margin-bottom: 30px;
@@ -30,20 +64,26 @@ footer {
 	}
 	.copyright-div {
 		border-top: 1px solid #ddd;
-		padding: 10px 0;
+		padding: 20px 0;
+		font-size: 0.8rem;
+		margin-top: 50px;
 
 		a {
 			text-decoration: none;
 			color: $black;
+			font-family: "Poppins", sans-serif;
 			opacity: 0.8;
+			font-weight: normal;
 			&:hover {
 				color: $primary;
 				opacity: 1;
 			}
+			margin-bottom: 0;
 		}
 		p {
 			color: $black;
-			opacity: 0.8;
+			margin-bottom: 0;
+			font-size: 0.8rem;
 		}
 	}
 }
