--- a/src/scss/theme/navbar.scss
+++ b/src/scss/theme/navbar.scss
@@ -1,5 +1,5 @@
 .navbar-bg {
-	background: linear-gradient(0deg, rgba(253, 128, 45, 0.328169), rgba(253, 128, 45, 0.0844713));
+	background: linear-gradient(0deg, rgba(253, 128, 45, 0.0844713), rgba(253, 128, 45, 0.328169));
 	background-repeat: no-repeat;
 
 	.navbar-toggler {
@@ -7,7 +7,10 @@
 	}
 
 	.sriprasd-logo {
-		width: 100px;
+		width: 70px;
+		@media (min-width: 768px) {
+			width: 100px;
+		}
 		height: auto;
 	}
 	.nav-link {
@@ -16,7 +19,7 @@
 		@media (min-width: 1200px) {
 			padding: 20px 0;
 		}
-		opacity: 0.8 !important;
+		opacity: 0.9 !important;
 		&:hover {
 			color: $primary !important;
 			opacity: 1 !important;
@@ -33,7 +36,7 @@
 		}
 		background-color: #fefbfa3d;
 		border-radius: 15px;
-		border: 1px solid #ffc5a6;
+		border: 1px solid #ffc5a670;
 	}
 
 	&.fixed-top {
