add about assets files and content

--- a/src/scss/theme/sections.scss
+++ b/src/scss/theme/sections.scss
@@ -26,6 +26,12 @@
 	}
 }
 
-.childhood-section {
+.education-section,
+.spiritual-section,
+.iandyou-green-section {
 	background-color: #ffeee580;
+}
+.childhood-section,
+.workshop-section {
+	background-color: #f1f1f14d;
 }
