--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -18,6 +18,10 @@ body {
 		font-family: "Poppins", sans-serif;
 		color: #000;
 		opacity: 0.8;
+		b {
+			opacity: 1 !important;
+			color: #000;
+		}
 	}
 }
 section {
