--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -20,7 +20,8 @@ body {
 		opacity: 0.8;
 		b {
 			opacity: 1 !important;
-			color: #000;
+			color: #020027;
+			font-weight: bolder;
 		}
 	}
 }
