--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -12,6 +12,7 @@ $dark-1: #00000040;
 $dark-2: #050309f7;
 $cyan: #0dcaf0;
 $light: #adb5bd;
+$light-1: #f1f1f14d;
 $black: #000;
 $darknew: #050309ed;
 $pink: #ff4566;
@@ -25,6 +26,7 @@ $theme-colors: (
 	"dark-2": $dark-2,
 	"cyan": $cyan,
 	"light": $light,
+	"light-1": $light-1,
 	"white": $white,
 	"black": $black,
 	"darknew": $darknew,
