--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -13,6 +13,10 @@ body {
 	background-color: $white;
 	font-family: "Lora", serif;
 	font-weight: 500;
+	@media (max-width: 767.98px) {
+		overflow-x: hidden;
+		position: relative;
+	}
 	p {
 		font-weight: normal;
 		font-family: "Poppins", sans-serif;
