--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -4,6 +4,7 @@
 @import "./theme/slider.scss";
 @import "./theme/footer.scss";
 @import "./theme/sections.scss";
+@import "./theme/pagebanner.scss";
 
 // ----- Fonts ----- //
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Niconne&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap");
