--- a/src/scss/theme/card.scss
+++ b/src/scss/theme/card.scss
@@ -297,3 +297,27 @@
 	}
 }
 // ---------- End Basic Card -------- //
+.register-card {
+	.register-card-image {
+		height: auto;
+		object-fit: cover;
+		border-radius: 20px;
+		margin-bottom: 20px;
+	}
+	iframe {
+		border-radius: 20px;
+	}
+
+	@media (min-width: 1200px) {
+		iframe {
+			border-radius: 0 20px 20px 0;
+			height: 597px;
+		}
+		.register-card-image {
+			height: 600px;
+			object-fit: cover;
+			border-radius: 20px 0 0 20px;
+			margin-bottom: 0;
+		}
+	}
+}
