--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -43,3 +43,13 @@ section {
 .br-20 {
 	border-radius: 20px;
 }
+
+.gradient-text {
+	background-image: linear-gradient(135deg, #fec163 10%, #de4313);
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: transparent;
+}
