--- a/src/scss/theme/card.scss
+++ b/src/scss/theme/card.scss
@@ -297,6 +297,7 @@
 	}
 }
 // ---------- End Basic Card -------- //
+// ---------- End Register Card -------- //
 .register-card {
 	.register-card-image {
 		height: auto;
@@ -321,3 +322,67 @@
 		}
 	}
 }
+
+// ---------- End Register Card -------- //
+// ---------- Start Regular Card -------- //
+.regular-card {
+	border-radius: 20px;
+	border: 1px solid #ddd;
+	background-color: #fff;
+	padding: 40px 20px;
+	height: auto;
+	width: 100%;
+	@media (min-width: 768px) {
+		height: 520px;
+	}
+
+	.icons {
+		width: 100px;
+		height: 100px;
+		margin-bottom: 30px;
+	}
+	h2 {
+		font-size: 1.5rem;
+		margin-bottom: 1.5rem;
+		font-weight: bold;
+	}
+	ul {
+		margin: 0 0 0 20px;
+		padding: 0;
+		li {
+			padding-bottom: 10px;
+		}
+	}
+	&:hover {
+		box-shadow: 0 10px 25px 10px rgba(255, 149, 0, 0.884);
+		-webkit-transform: translateY(-5px);
+		transform: translateY(-5px);
+		transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+		border: 1px solid $primary;
+	}
+}
+.benifits {
+	border-radius: 20px;
+	border: 1px solid #ddd;
+	background-color: #fff;
+	padding: 20px;
+	height: auto;
+	width: 100%;
+	height: 100%;
+	.regular-ul {
+		li {
+			padding-bottom: 5px;
+			font-size: 1.1rem;
+			font-weight: 500;
+			&:last-child {
+				padding-bottom: 0;
+			}
+		}
+	}
+}
+.benifits-img {
+	height: 524px;
+	width: 100%;
+	object-fit: cover;
+}
+// ---------- End Regular Card -------- //
