--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -53,3 +53,8 @@ section {
 	-webkit-text-fill-color: transparent;
 	-moz-text-fill-color: transparent;
 }
+
+.btn-primary {
+	color: $white;
+	font-family: "Poppins", sans-serif;
+}
