--- a/src/scss/theme/card.scss
+++ b/src/scss/theme/card.scss
@@ -333,7 +333,7 @@
 	height: auto;
 	width: 100%;
 	@media (min-width: 768px) {
-		height: 520px;
+		height: 600px;
 	}
 
 	.icons {
@@ -386,3 +386,32 @@
 	object-fit: cover;
 }
 // ---------- End Regular Card -------- //
+.close-icon {
+	position: absolute;
+	right: 30px;
+	top: 30px;
+	z-index: 11;
+	cursor: pointer;
+	opacity: 0.5;
+	&:hover {
+		opacity: 1;
+	}
+}
+
+.regular-ul {
+	li {
+		padding-bottom: 5px;
+		font-size: 1.1rem;
+		font-weight: 500;
+		&:last-child {
+			padding-bottom: 0;
+		}
+	}
+}
+.para-card {
+	padding: 20px 0;
+	border: 1px solid #ddd;
+	background-color: #fff;
+	border-radius: 20px;
+	margin-bottom: 20px;
+}
