--- a/src/scss/theme/sections.scss
+++ b/src/scss/theme/sections.scss
@@ -53,6 +53,21 @@
 			padding: 30px;
 			height: 600px;
 		}
+		.social-media {
+			margin-bottom: 30px;
+			li {
+				display: inline-block;
+				padding: 0 20px 0 0;
+			}
+			.icon {
+				width: 24px;
+				height: 24px;
+				filter: grayscale(1);
+				&:hover {
+					filter: grayscale(0);
+				}
+			}
+		}
 		margin-top: 30px;
 		a {
 			color: $black;
