--- a/src/scss/theme/sections.scss
+++ b/src/scss/theme/sections.scss
@@ -97,3 +97,12 @@
 		}
 	}
 }
+
+// Youtube video section //
+.youtube-video-section {
+	iframe {
+		width: 100%;
+		height: 500px !important;
+		border-radius: 20px;
+	}
+}
