--- a/src/scss/theme/card.scss
+++ b/src/scss/theme/card.scss
@@ -220,6 +220,9 @@
 .special-title {
 	font-family: "Niconne", cursive;
 }
+.special-title-new {
+	font-family: "Lora", serif;
+}
 
 .gradient-text {
 	vertical-align: middle;
@@ -421,11 +424,11 @@
 	&::before {
 		content: "// ";
 		position: absolute;
-		left: -55px;
+		left: -25px;
 	}
 	&.new {
 		&::before {
-			left: -35px;
+			left: -25px;
 		}
 	}
 }
@@ -435,11 +438,11 @@
 	&::before {
 		content: " //";
 		position: absolute;
-		right: -55px;
+		right: -25px;
 	}
 	&.new {
 		&::before {
-			right: -35px;
+			right: -25px;
 		}
 	}
 }
