--- a/src/scss/theme/pagebanner.scss
+++ b/src/scss/theme/pagebanner.scss
@@ -15,7 +15,10 @@
 	}
 	.image {
 		width: 100%;
-		height: 600px;
+		height: 400px;
+		@media (min-width: 768px) {
+			height: 600px;
+		}
 		object-fit: cover;
 		border-radius: 20px;
 	}
@@ -32,11 +35,16 @@
 	}
 	.content {
 		position: absolute;
-		bottom: 50px;
+		bottom: 15px;
 		left: 50%;
 		transform: translateX(-50%);
 		z-index: 111;
 		text-align: center;
+		width: 95%;
+		@media (min-width: 768px) {
+			width: 100%;
+			bottom: 50px;
+		}
 		h2 {
 			color: $white;
 		}
