--- a/src/scss/theme/sections.scss
+++ b/src/scss/theme/sections.scss
@@ -106,3 +106,23 @@
 		border-radius: 20px;
 	}
 }
+
+// Awards
+
+.award-ul {
+	margin: 0;
+	padding: 0;
+	li {
+		list-style: none;
+		padding: 20px 30px;
+		font-size: 1.1rem;
+		background-color: #fff;
+		border: 1px solid #ddd;
+		margin-bottom: 20px;
+		border-radius: 10px;
+		b {
+			font-weight: 900;
+			color: $black;
+		}
+	}
+}
