--- a/src/scss/theme/sections.scss
+++ b/src/scss/theme/sections.scss
@@ -126,3 +126,14 @@
 		}
 	}
 }
+
+.punarjeevana-section {
+	.images {
+		width: 100%;
+		height: auto;
+		@media (min-width: 768px) {
+			height: 500px;
+		}
+		object-fit: cover;
+	}
+}
