--- a/src/scss/theme/card.scss
+++ b/src/scss/theme/card.scss
@@ -418,7 +418,7 @@
 	}
 }
 .para-card {
-	padding: 20px 0;
+	padding: 20px;
 	border: 1px solid #ddd;
 	background-color: #fff;
 	border-radius: 20px;
