--- a/src/scss/theme/sections.scss
+++ b/src/scss/theme/sections.scss
@@ -51,7 +51,14 @@
 		padding: 20px 15px;
 		@media (min-width: 768px) {
 			padding: 30px;
-			height: 600px;
+			&.responsive {
+				height: 520px;
+			}
+		}
+		@media (min-width: 992px) {
+			&.responsive {
+				height: 630px;
+			}
 		}
 		.social-media {
 			margin-bottom: 30px;
@@ -89,11 +96,28 @@
 		}
 		iframe {
 			width: 100%;
-			height: auto;
+			height: 700px !important;
 			@media (min-width: 768px) {
-				height: 600px;
+				height: 420px !important;
+			}
+			@media (min-width: 992px) {
+				height: 520px !important;
 			}
 			border-radius: 20px;
+		}
+		.contact-frame-footer {
+			width: calc(100% - 30px);
+			border-radius: 0 0 20px 20px;
+			background-color: #fff;
+			position: absolute;
+			bottom: 1px;
+			height: 130px;
+			@media (min-width: 768px) {
+				margin-left: -10px !important;
+			}
+			@media (min-width: 992px) {
+				height: 120px !important;
+			}
 		}
 	}
 }
